fixtures/errors/undefined_stem.hu
@use * from "helpers.hu"

inflection bad_stem for {tense, number} {
  requires stems: root

  [tense=present, number=sg] -> `{nosuchstem}s`
  [tense=present, number=pl] -> `{root}`
  [tense=past, number=sg] -> `{root}ed`
  [tense=past, number=pl] -> `{root}ed`
}

entry broken {
  headword: "broken"
  tags: [parts_of_speech=verb]
  stems { root: "break" }
  inflection_class: bad_stem
  meaning: "to break"
}
